# clawterm

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  eslint.config.js  index.html  install.ps1  install.sh  llms.txt  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
HomebrewFormula/: clawterm.rb
docs/: README.md  architecture.md  development.md  docs.html  index.html  llms-full.txt  robots.txt  sitemap.xml
docs/features/: worktrees.md
docs/getting-started/: installation.md
docs/reference/: configuration.md  keybindings.md
scripts/: release.mjs
src/: command-palette.ts  config-types.ts  config.ts  context-menu.ts  file-link-provider.ts  fonts.css  keybinding-handler.ts  logger.ts  main.ts  matchers.ts  notifications.ts  osc-handler.ts  output-analyzer.ts  pane-webgl.ts  pane.ts  paste-confirm.ts  perf.ts  project.ts  search-bar.ts  server-tracker.ts  session.ts  shortcuts-panel.ts  split-choice-dialog.ts  style.css  tab-output.ts  tab-polling.ts  tab-renderer.ts  tab-state.ts  tab-switcher.ts  tab.ts  terminal-manager.ts  toast.ts  updater.ts  utils.ts  workspace-panel.ts  worktree-actions.ts  worktree-base.ts  worktree-dialog.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/tauri-plugin-pty/: Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-pty/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-pty/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-pty/src/: lib.rs
src-tauri/src/: git_info.rs  main.rs  process_info.rs  project_info.rs  server_check.rs  worktree.rs
src/themes/: resolve.ts  types.ts
src/themes/presets/: catppuccin-mocha.ts  default-dark.ts  dracula.ts  gruvbox-dark.ts  midnight.ts  nord.ts  rose-pine.ts  solarized-dark.ts  solarized-light.ts  tokyo-night.ts
tests/: config-validation.test.ts  config.test.ts  matchers.test.ts  osc-handler.test.ts  output-analyzer.test.ts  server-tracker.test.ts  session.test.ts  tab-polling.test.ts  tab-state.test.ts  worktree-base.test.ts  worktree.test.ts
