[package]
name = "clawterm"
version = "0.5.2"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-pty = "0.2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libc = "0.2"
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
