[package]
name = "clawterm"
version = "0.12.1"
edition = "2021"

[dependencies]
tauri = "2"
tauri-plugin-pty = { path = "plugins/tauri-plugin-pty" }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libc = "0.2"
dirs = "6"

# macOS: enable private API for titlebar customization
[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }

# Windows: process introspection APIs
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }
sysinfo = "0.33"

[build-dependencies]
tauri-build = { version = "2", features = [] }
